# CreativePipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/brand/: brand_config.yaml
data/briefs/: sample_brief.json  sample_brief.yaml  test_brief.json
docs/: ARCHITECTURE.md
src/: __init__.py  __main__.py  cli.py
src/service/: __init__.py
src/service/compliance/: __init__.py  brand_checker.py  legal_checker.py
src/service/core/: __init__.py  colors.py  logger.py
src/service/integrations/: __init__.py  creative_director.py  image_generator.py  localizer.py  message_generator.py  storage.py
src/service/pipeline/: __init__.py  asset_manager.py  image_processor.py  orchestrator.py  report.py  text_renderer.py
src/shared/: __init__.py  config.py  exceptions.py  models.py
src/web/: __init__.py  app.py  state.py  utils.py
src/web/routes/: __init__.py  campaigns.py  jobs.py  pipeline.py  ui.py
src/web/static/: app.js  styles.css
src/web/templates/: index.html
tests/: conftest.py  test_asset_manager.py  test_brand_checker.py  test_cli.py  test_image_generator.py  test_image_processor.py  test_legal_checker.py  test_message_generator.py  test_models.py  test_pipeline.py  test_storage.py  test_text_renderer.py  test_web.py
